# c_cpp_snippets

./: .gitignore  Article.md  Clion.md  IoT.md  Linux.md  Linux_GCC.md  Linux_GCC_Debug.md  MAKEs.md  MAKEs_CMake.md  README.md  Windows.md  Windows_05_kernel.md  Windows_10内核编程.md  Windows_10内核编程_kernel.md  Windows_VisualStudio.md  asm.md  hook_WeChat.md  re_game.md  reverse.md  reverse_security.md  算法_algorithms.md
asm_project/: READMD.md  asm_project.sln
asm_project/01_lesson0/: 101_Main_example.asm  Main.asm
asm_project/05_App_Reverser/: Reverser.asm
asm_project/06_ArraySum/: Main.asm
asm_project/10_SignedDivMul/: README.md
asm_project/lesson0/: lesson0.vcxproj
asm_project/lesson0/Debug/: lesson0.exe.recipe  lesson0.ilk
asm_project/lesson0/Debug/lesson0.tlog/: Masm.read.1u.tlog  Masm.write.1u.tlog  lesson0.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
c_project/: 01_01_init_pointer.c  01_01_int_to_char.c  01_01_variable_force_convert.c  01_03_ptr_test.c  01_atoi.c  01_printf.c  01_variable_force_convert.c  02_string_01.c  02_string_02_slice.c  02_string_10_convert_number_atoi.c  02_string_test.c  02_struct_01_add_two_distance.c  CMakeLists.txt  README.md  basic_01_put_putchar_printf.c  csapp_datalab.c  datetime.c  file_02_write.c  file_03_read.c  file_03_read2_whole_contents.c  file_04_writebinary.c  file_05_read_from_binary_file.c  file_06_seek.c  utils.c
c_project/algorithm/: README.md  rc4.c  rc41.c  rc42.c  xtea.c
c_project/ctf/: moectf2022_broken_hash.c  moectf2022_fake_code.c
c_project/ctf/pwn/: README.md
cpp_project/: CMakeLists.txt  a03_vector.cpp  control_if_for.cpp  file_02_write.cpp  file_03_read.cpp  str_test.cpp
lnnks_lessons/: lnnks_lesson.sln
lnnks_lessons/游戏安全_11变速齿轮/: 游戏安全_11变速齿轮.vcxproj  游戏安全_11变速齿轮.vcxproj.filters
main/: Readme.MD
